# poc-skills-graphiti

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/agent/: agent.py
src/agent/nodes/: __init__.py  agent_node.py  routing.py  tool_node.py
src/agent/prompts/: agent_node.md
src/config/: __init__.py  anthropic.py  config.py  logger.py
src/tools/: anthropic.py  anthropic_sdk.py  e2b.py  google_tools.py  graphiti.py  http.py
src/utils/: http.py
