[project]
name = "poc-skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.4.1",
    "graphiti-core>=0.28.1",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-google-genai>=2.1.12",
    "langgraph>=1.0.10",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
